--- a/navigating-disagreements-in-corporate-business.html
+++ b/navigating-disagreements-in-corporate-business.html
@@ -182,7 +182,18 @@
 </script>
                             <p>Establishing clear roles and expectations eliminates confusion about responsibilities and helps prevent overlap or gaps in duties. Implementing collaborative problem-solving techniques allows individuals to express their viewpoints and work towards mutually beneficial resolutions. Performance feedback systems can help clarify expectations and identify areas of structural conflict. Ensuring clear reporting relationships minimizes conflicting demands from multiple supervisors. Following organizational changes or restructures, checking with workers to ensure they understand any new responsibilities is crucial. In some cases, external mediators can provide a neutral perspective and expertise in resolving deeply entrenched structural conflicts.</p>
 <p>Solutions for poor management as a source of conflict include proactive measures to prevent issues, setting clear expectations for acceptable behavior, and utilizing clear communication 8. Being proactive involves identifying potential areas of conflict and intervening before they escalate, such as facilitating team bonding activities.</p> 
-<p>Establishing clear policies on acceptable workplace behavior and regularly reminding employees of these standards is essential. Training employees and managers on effective communication techniques is crucial. Addressing conflicts directly and openly, rather than ignoring them, is vital. Clarifying the issue causing the conflict by gathering information from all involved parties is a key step. Bringing the involved parties together to talk in a neutral setting, acting as a mediator, can help them find healthy solutions. Identifying a mutually acceptable solution that aims for a win-win scenario is the desired outcome. Monitoring and following up on the agreed solution is necessary to ensure its effectiveness.</p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
+     data-ad-client="ca-pub-2859965243036959"
+     data-ad-slot="9681146952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+                            <p>Establishing clear policies on acceptable workplace behavior and regularly reminding employees of these standards is essential. Training employees and managers on effective communication techniques is crucial. Addressing conflicts directly and openly, rather than ignoring them, is vital. Clarifying the issue causing the conflict by gathering information from all involved parties is a key step. Bringing the involved parties together to talk in a neutral setting, acting as a mediator, can help them find healthy solutions. Identifying a mutually acceptable solution that aims for a win-win scenario is the desired outcome. Monitoring and following up on the agreed solution is necessary to ensure its effectiveness.</p>
 <p>Addressing conflict arising from unfair treatment requires identifying bias, leading by example, promoting diversity, encouraging open dialogue, and introducing health and wellness programs. Leaders should be self-aware of their own biases and strive to make fair choices. Leading by example sets the standard for fair and respectful conduct. Promoting diversity and inclusion brings different perspectives together and can help identify unfair treatment.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
@@ -198,15 +209,15 @@
                             <p>Creating a culture where employees feel safe voicing concerns is vital. Clearly defined anti-bullying and anti-harassment policies, communicated effectively, are essential for preventing unfair treatment 9. Addressing conflicts promptly and openly, clarifying the issue, and bringing involved parties together are crucial steps in resolution. Emphasizing a win-win scenario and monitoring the agreed solution are also important.</p>
 <p>Resolving conflict due to unclear job roles involves clarifying responsibilities and expectations through various methods. Encouraging transparent dialogue and collaborative problem-solving can help identify and address ambiguities. Defining roles and setting clear expectations eliminates confusion about responsibilities. Utilizing tools like RACI matrices can help clarify who is Responsible, Accountable, Consulted, and Informed for different tasks.</p>
 <p>Providing all workers with a corporate induction and ensuring they understand their role within the team and the organization is important. Assisting workers in developing personal work plans that clearly define task objectives and expected outputs can also improve role clarity. Ensuring workers have up-to-date role or position descriptions outlining their purpose, reporting relationships, and key duties is crucial.</p>
-<p>Addressing conflict stemming from inadequate training involves providing the necessary education and support to employees 8. Understanding the root cause of the conflict, which may be a lack of skills or knowledge, is the first step. Encouraging transparent dialogue allows employees to express their concerns about their ability to perform tasks. Focusing on shared objectives can help reframe the conflict as a training need rather than a performance issue. Collaborating on solutions might involve identifying specific training requirements. Implementing team-building exercises can also help strengthen bonds and identify areas where training might be needed. Providing onboarding, reskilling, and upskilling opportunities ensures employees have the necessary knowledge and skills.</p>
+<p>Addressing conflict stemming from inadequate training involves providing the necessary education and support to employees. Understanding the root cause of the conflict, which may be a lack of skills or knowledge, is the first step. Encouraging transparent dialogue allows employees to express their concerns about their ability to perform tasks. Focusing on shared objectives can help reframe the conflict as a training need rather than a performance issue. Collaborating on solutions might involve identifying specific training requirements. Implementing team-building exercises can also help strengthen bonds and identify areas where training might be needed. Providing onboarding, reskilling, and upskilling opportunities ensures employees have the necessary knowledge and skills.</p>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
+     style="display:block"
      data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
      data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="1255862027"></ins>
+     data-ad-slot="9681146952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -229,11 +240,11 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
+     style="display:block"
      data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
      data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="1255862027"></ins>
+     data-ad-slot="9681146952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -255,11 +266,11 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
+     style="display:block"
      data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
      data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="1255862027"></ins>
+     data-ad-slot="9681146952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -282,11 +293,11 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
+     style="display:block"
      data-ad-format="fluid"
+     data-ad-layout-key="-8r+ez-1j-39+br"
      data-ad-client="ca-pub-2859965243036959"
-     data-ad-slot="1255862027"></ins>
+     data-ad-slot="9681146952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
