--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="social">
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href="https://www.facebook.com/kemedia1"><i class="fab fa-facebook"></i></a>
-                            <a href="youtube.com/@kemedia2022"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/@kemedia_1"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
