--- a/3 AI tools to make money online in 2025.html
+++ b/3 AI tools to make money online in 2025.html
@@ -49,8 +49,8 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <div class="social">
-                            <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/kemedia1"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.youtube.com/@kemedia_1"><i class="fab fa-youtube"></i></a>
 
                         </div>
                     </div>
