--- a/conflict-management-in-corporate-businesses.html
+++ b/conflict-management-in-corporate-businesses.html
@@ -11,7 +11,7 @@
         <title>Conflict Management in Corporate Business</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
-        <meta content="Latest News" name="description">
+        <meta content="Business Blog" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -49,8 +49,8 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <div class="social">
-                            <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/kemedia1"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.youtube.com/@kemedia_1"><i class="fab fa-youtube"></i></a>
 
                         </div>
                     </div>
