--- a/politics.html
+++ b/politics.html
@@ -8,8 +8,8 @@
         <meta charset="utf-8">
         <title>KE Media- Contact Us</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Best Media Company" name="keywords">
-        <meta content="Latest News" name="description">
+        <meta content="" name="keywords">
+        <meta content="politics" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -47,8 +47,8 @@
                     </div>
                     <div class="col-lg-3 col-md-4">
                         <div class="social">
-                            <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/kemedia1"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.youtube.com/@kemedia_1"><i class="fab fa-youtube"></i></a>
 
                         </div>
                     </div>
