--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
                                         </div>
                                     </div>
                     <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-6">
                                 <div class="tn-img">
                                     <img src="img/kapropita.jpg" />
                                     
@@ -135,6 +137,8 @@
                     </div>
                             </div>
                     <div class="col-md-6 tn-left">
+                        <div class="row">
+                            <div class="col-md-6">
                         <div class="tn-img">
                             <img src="img/Briminkipkorir.jpg" />
                             
