--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                     </div>
                             <div class="col-md-6">
                                 <div class="tn-img">
-                                    <img src="arsenal.jpg" />
+                                    <img src="img/arsenal.jpg" >
                                             <a class="cn-date" href="arsenal fate.html"><i class="far fa-clock"></i>28-Feb-2025</a>
                                             <a class="cn-title" href="arsenal fate.html">Arsenal fate in European Champions League</a>
 
