--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2><i class="fas fa-align-justify"></i>Soccer News</h2>
+                        <h2><i class="fas fa-align-justify"></i>Sport and Soccer News</h2>
                         <div class="row cn-slider">
                             <div class="col-md-6">
                                 <div class="cn-img">
@@ -320,10 +320,8 @@
                                             <img src="img/jematiah.jpg" />
                                         </div>
                                         <div class="mn-content">
-                                            <a class="mn-title" href="">Hon.Jematiah Baringo County Slams Bishop Muheria</a>
-                                            <a class="mn-date" href=""><i class="far fa-clock"></i>17-Feb-2025</a>
-                                            <p>Flowrence Jematiah Sergon Women Rep. Baringo slams Bishop Muheria over his remarks that President William Samoei Ruto 's administration is acting like a marketing agent instead of delivering to Kenyans.
-                                            </p>
+                                            <a class="mn-title" href="jematiah-slams=bishop.html">Hon.Jematiah Baringo County Slams Bishop Muheria</a>
+                                            <a class="mn-date" href="jematiah-slams=bishop.html"><i class="far fa-clock"></i>17-Feb-2025</a>
                                         </div>
                                     </div>
                             <div class="col-md-12">
@@ -336,26 +334,7 @@
                                         <div class="mn-content">
                                             <a class="mn-title" href="">Kithure Kindiki Weighs in on Alleged Plan to Kick Martha Koome Out of Office</a>
                                                 <a class="mn-date" href=""><i class="far fa-clock"></i>24-Feb-2025</a>
-                                                <p>Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office. </p>
-
-                                                <p>In a statement on Monday, February 24, the DP emphasized that the process of removing a judge from office must remain constitutional and free from political or ethnic influences.</p>
-
-                                                <p>Kindiki stressed that judicial matters should not be trivialized by ethnic or political considerations, urging both accusers and defenders of judges to rely on constitutional and legal arguments.</p>
-
-                                                <p>"Removal of a judge from office is purely a constitutional matter and not a political or ethnic issue. Accusers and defenders of judges must use constitutional and legal arguments to state their positions rather than trivializing such a weighty legal matter by bringing in ethnicity into the equation. Who will defend the judges who may be innocent but do not have ethnic godfathers?" he wrote on X.</p>
-                                                <p>Kindiki's remarks come a day after former Deputy President Rigathi Gachagua warned President William Ruto over an alleged plan to kick Koome out of office.  </p>
-                                                <p>Speaking during a church service in Meru County, the former DP said Ruto should not set foot in Meru if the alleged plan goes through.</p>
-
-                                                <p>"If you chase our Martha Koome, don't set foot in Meru. You chased Rigathi Gachagua, and the Mt. Kenya people were silent, you thought they were cowards," he said. </p>
-
-                                                <p>Gachagua accused Ruto of orchestrating a scheme to remove her from office, claiming that she is being targeted for refusing to be subservient.</p>
-
-                                                <p>"He started by kicking me out of his government, and he also did the same to Mithika Linturi. She is being fought because she has refused to be a 'yes sir' person," he stated.</p>
-
-                                                <p>Additionally, Gachagua promised to call for protests if the plan is hatched, accusing Ruto of destroying the leadership of the Mt. Kenya Region.</p>
-
-                                                <p>"This is too much now. How do you purge the leadership of an entire community that made you president? If Koome is dismissed and I call for protests, will you come out? We are not going to sit again as Ruto destroys the leadership of Mount Kenya," he added.</p>
-                                            </div>
+                                               
                             </div>
                         </div>
                     </div>
