--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                                             <img src="img/kindiki.jpg" />
                                         </div>
                                         <div class="mn-content">
-                                            <a class="mn-title" href="">Kithure Kindiki Weighs in on Alleged Plan to Kick Martha Koome Out of Office</a>
-                                                <a class="mn-date" href=""><i class="far fa-clock"></i>24-Feb-2025</a>
+                                            <a class="mn-title" href="kindiki-plots-against-koome.html">Kithure Kindiki Weighs in on Alleged Plan to Kick Martha Koome Out of Office</a>
+                                                <a class="mn-date" href="kindiki-plots-against-koome.html"><i class="far fa-clock"></i>24-Feb-2025</a>
                                                
                             </div>
                         </div>
