--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/burnaboy.jpg" />
-                                   < a class="cn-date" href="burnayboy.html"><i class="far fa-clock"></i>26-Feb-2025</a>
+                                   <a class="cn-date" href="burnaboy.html"><i class="far fa-clock"></i>i>26-Feb-2025</a>
                                             <a class="cn-title" href="burnaboy.html">Burna Boy to come perform in Kenya on March 1, 2025</a>
                                         </div>
                                     </div>
