--- a/index.html
+++ b/index.html
@@ -306,39 +306,37 @@
         <!-- Category News End-->
 
 
-        <!-- Main News Start-->
-        <div class="main-news">
+        <!-- Latest News Start-->
+        <<div class="cat-news">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-8">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h2><i class="fas fa-align-justify"></i>Latest News</h2>
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="mn-img">
-                                            <img src="img/jematiah.jpg" />
-                                        </div>
-                                        <div class="mn-content">
-                                            <a class="mn-title" href="jematiah-slams=bishop.html">Hon.Jematiah Baringo County Slams Bishop Muheria</a>
-                                            <a class="mn-date" href="jematiah-slams=bishop.html"><i class="far fa-clock"></i>17-Feb-2025</a>
+                    <div class="col-md-6">
+                        <h2><i class="fas fa-align-justify"></i>Latest News</h2>
+                        <div class="row cn-slider">
+                            <div class="col-md-6">
+                                <div class="cn-img">
+                                    <img src="img/jematiah.jpg" />
+                                    <a class="mn-title" href="">Hon.Jematiah Women Rep Baringo County Slams Bishop Muheria</a>
+                                            <a class="mn-date" href=""><i class="far fa-clock"></i>17-Feb-2025</a>
+
                                         </div>
                                     </div>
-                            <div class="col-md-12">
-                                <h2><i class="fas fa-align-justify"></i>Popular News</h2>
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="mn-img">
-                                            <img src="img/kindiki.jpg" />
-                                        </div>
-                                        <div class="mn-content">
-                                            <a class="mn-title" href="kindiki-plots-against-koome.html">Kithure Kindiki Weighs in on Alleged Plan to Kick Martha Koome Out of Office</a>
-                                                <a class="mn-date" href="kindiki-plots-against-koome.html"><i class="far fa-clock"></i>24-Feb-2025</a>
-                                               
-                            </div>
-                        </div>
-                    </div>
+<!-- Popular News Start-->
+<div class="cat-news">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2><i class="fas fa-align-justify"></i>Porpular News</h2>
+                        <div class="row cn-slider">
+                            <div class="col-md-6">
+                                <div class="cn-img">
+                                    <img src="img/kindiki.jpg" />
+                                    <a class="mn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
+                                            <a class="mn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>17-Feb-2025</a>
 
+                                        </div>
+                            </div>
+<!-- Category Start-->
                     <div class="col-md-4">
                         <div class="sidebar">
                             <div class="sidebar-widget">
