--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
 
         <!-- Latest News Start-->
-        <<div class="cat-news">
+        <div class="cat-news">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6">
@@ -316,11 +316,15 @@
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/jematiah.jpg" />
-                                    <a class="mn-title" href="">Hon.Jematiah Women Rep Baringo County Slams Bishop Muheria</a>
-                                            <a class="mn-date" href=""><i class="far fa-clock"></i>17-Feb-2025</a>
+                                                                        <a class="cn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>i>26-Feb-2025</a>
+                                            <a class="cn-title" href="jematiah-slams-bishop-muheria.html">Hon.Jematiah Baringo County Slams Bishop Muheria.</a>
 
                                         </div>
                                     </div>
+                            </div>
+                            </div>
+                        </div>
+                
 <!-- Popular News Start-->
 <div class="cat-news">
             <div class="container-fluid">
@@ -331,11 +335,18 @@
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/kindiki.jpg" />
-                                    <a class="mn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
-                                            <a class="mn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>17-Feb-2025</a>
+                                    <a class="cn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>i>26-Feb-2025</a>
+                                            <a class="cn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
+                                    
 
                                         </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+</div>
+            </div>
 <!-- Category Start-->
                     <div class="col-md-4">
                         <div class="sidebar">
