--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/burnaboy.jpg" />
-                                   <a class="cn-date" href="burnaboy.html"><i class="far fa-clock"></i>i>26-Feb-2025</a>
+                                   <a class="cn-date" href="burnaboy.html"><i class="far fa-clock"></i>26-Feb-2025</a>
                                             <a class="cn-title" href="burnaboy.html">Burna Boy to come perform in Kenya on March 1, 2025</a>
                                         </div>
                                     </div>
@@ -314,14 +314,14 @@
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/jematiah.jpg" />
-                                                                        <a class="cn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>i>26-Feb-2025</a>
+                                                                        <a class="cn-date" href="jematiah-slams-bishop-muheria.html"><i class="far fa-clock"></i>26-Feb-2025</a>
                                             <a class="cn-title" href="jematiah-slams-bishop-muheria.html">Hon.Jematiah Baringo County Slams Bishop Muheria.</a>
                                         </div>
                                     </div>
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/kindiki.jpg" />
-                                    <a class="cn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>i>26-Feb-2025</a>
+                                    <a class="cn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>26-Feb-2025</a>
                                             <a class="cn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
                                     
                                     </div>
