--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
 
 
        
-            
+            <div class="cat-news">
+            <div class="container-fluid">
+                <div class="row">
                     <div class="col-md-6">
                         <h2><i class="fas fa-align-justify"></i>Popular News</h2>
                         <div class="row cn-slider">
