--- a/Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum.html
+++ b/Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum.html
@@ -8,10 +8,10 @@
         <script async src="https://fundingchoicesmessages.google.com/i/pub-2859965243036959?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
        <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
         <meta charset="utf-8">
-        <title>Conflict Management in Corporate Business</title>
+        <title>Sudan's army recaptures key institutions as it advances in central Khartoum</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
-        <meta content="Business Blog" name="description">
+        <meta content="Africa News" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -81,7 +81,7 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
                                 <div class="dropdown-menu">
-                                    <a href="latest%20News.html" class="dropdown-item">Latest News</a>
+                                    
                                     <a href="Blog.html" class="dropdown-item">Blog</a>
                                 </div>
                             </div>
@@ -112,10 +112,10 @@
                 <div class="row">
                     <div class="col-md-6 tn-left">
                         <div class="tn-img">
-                            <img src="img/corporate.jpg" />
+                            <img src="img/sudan-army.jpg" />
                             
-                                    <a class="tn-date" href=""><i class="far fa-clock"></i>23-Mar-2025</a>
-                          <h1>Conflict Management in Corporate Businesses: Causes and Resolution Strategies</h1>
+                                    <a class="tn-date" href=""><i class="far fa-clock"></i>25-Mar-2025</a>
+                          <h1>Sudan's army recaptures key institutions as it advances in central Khartoum</h1>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2859965243036959"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
