--- a/index.html
+++ b/index.html
@@ -318,6 +318,13 @@
                                             <a class="cn-title" href="jematiah-slams-bishop-muheria.html">Hon.Jematiah Baringo County Slams Bishop Muheria.</a>
                                         </div>
                                     </div>
+                        <div class="col-md-6">
+                                <div class="cn-img">
+                                    <img src="img/sudan-army.jpg" />
+                                                                        <a class="cn-date" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum"><i class="far fa-clock"></i>26-Feb-2025</a>
+                                            <a class="cn-title" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum">Sudan's army recaptures key institutions at it advances in central Khartoum.</a>
+                                        </div>
+                                    </div>
                             <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/kindiki.jpg" />
