--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <div class="tn-img">
                                     <img src="img/gavel.jpg" />
                                     
-                                            <a class="tn-date" href="super-metro-ban-halted.html"><i class="far fa-clock"></i>24-Mar-2025</a>
+                                            <a class="tn-date" href="High-court-halts-SHA-recruitment-pending-KUCO's-case-ruling.html"><i class="far fa-clock"></i>25-Mar-2025</a>
                                     <a class="cn-title" href="High-court-halts-SHA-recruitment-pending-KUCO's-case-ruling.html"> High court halts SHA recruitment pending KUCO's case ruling</a>
                                         </div>      
                                         </div>
