--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
                         <div class="row cn-slider">
                             <div class="col-md-6">
                                 <div class="cn-img">
-                                    <img src="img/manunited.jpg" />
-                                    <a class="cn-date" href="manunitedfate.html"><i class="far fa-clock"></i>25-Feb-2025</a>
-                                            <a class="cn-title" href="manunitedfate.html">Manchester United Head Coach Ruben Amorin updates his squad ahead wednesday match against Ipswich</a>
+                                    <img src="img/transfer.jpg" />
+                                    <a class="cn-date" href="Football-transfers-news-updates.html"><i class="far fa-clock"></i>25-Mar-2025</a>
+                                            <a class="cn-title" href="Football-transfers-news-updates.html">Transfer Centre LIVE! Football transfers, news, updates and rumours</a>
 
                                         </div>
                                     </div>
@@ -227,6 +227,12 @@
                                         </div>   
                                             
                                         </div>
+                            div class="col-md-6">
+                                <div class="cn-img">
+                                    <img src="img/transfer.jpg" />
+                                    <a class="cn-date" href="manunitedfate.html"><i class="far fa-clock"></i>25-Mar-2025</a>
+                                            <a class="cn-title" href="manunitedfate.html">Manchester United Head Coach Ruben Amorin updates his squad ahead wednesday match against Ipswich</a>
+
                                 </div>
                             </div>
                             
