--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                         </div>
                             div class="col-md-6">
                                 <div class="cn-img">
-                                    <img src="img/transfer.jpg" />
+                                    <img src="img/manunited.jpg" />
                                     <a class="cn-date" href="manunitedfate.html"><i class="far fa-clock"></i>25-Mar-2025</a>
                                             <a class="cn-title" href="manunitedfate.html">Manchester United Head Coach Ruben Amorin updates his squad ahead wednesday match against Ipswich</a>
 
