--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
 
         <!-- Footer Start -->
-       <!-- Footer Start -->
+              <!-- Footer Start -->
         <div class="footer">
         <div class="footer">
             <div class="container-fluid">
@@ -429,11 +429,8 @@
                             <div class="newsletter">
                                 <p>Sign up to our newsletter to receive latest updates .
                                 </p>
-                                <form action="https://api.web3forms.com/submit" method="POST">
-                    <input type="hidden" name="access_key" value="9b9e0743-fe23-4d0c-bd5b-fdecf5089087">
-                                    <input type="text" name="name" required>
+                                <form>
                                     <input class="form-control" type="email" placeholder="Your email here">
-                                    <textarea name="message" required></textarea>
                                     <button class="btn">Submit</button>
                                 </form>
                             </div>
@@ -462,7 +459,7 @@
 
 
         <!-- Back to Top -->
-        <a href="index.html" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
 
         <!-- JavaScript Libraries -->
