--- a/sport.html
+++ b/sport.html
@@ -134,7 +134,7 @@
                                         </div>
                                     </div>
                                 </div>
-           div class="col-md-6">
+           <div class="col-md-6">
                         <div class="tn-img">
                             <img src="img/Briminkipkorir.jpg" />
                             
