--- a/sport.html
+++ b/sport.html
@@ -124,7 +124,7 @@
                                         </div>   
                                             
                                         </div>
-                            div class="col-md-6">
+                            <div class="col-md-6">
                                 <div class="cn-img">
                                     <img src="img/manunited.jpg" />
                                     <a class="cn-date" href="manunitedfate.html"><i class="far fa-clock"></i>25-Mar-2025</a>
@@ -135,7 +135,7 @@
                                     </div>
                                 </div>
            <div class="col-md-6">
-                        <div class="tn-img">
+                        <div class="cn-img">
                             <img src="img/Briminkipkorir.jpg" />
                             
                                     <a class="tn-date" href="Brimin-kipkorir-doping-probe.html"><i class="far fa-clock"></i>28-Feb-2025</a>
