--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 </div>
                             </div>
 
-                            
+                            <div class="sidebar-widget">
                                 <h2><i class="fas fa-align-justify"></i>Tags</h2>
                                 <div class="tags">
                                     <a href="national.html">National</a>
@@ -385,6 +385,11 @@
                                     
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
         <!-- Main News End-->
 
 
