--- a/index.html
+++ b/index.html
@@ -332,17 +332,17 @@
                                         </div>
                                     </div>
                         <div class="col-md-6">
-                                <div class="cn-img">
+                                <div class="tn-img">
                                     <img src="img/sudan-army.jpg" />
-                                                                        <a class="cn-date" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum"><i class="far fa-clock"></i>25-Mar-2025</a>
-                                            <a class="cn-title" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum">Sudan's army recaptures key institutions at it advances in central Khartoum.</a>
+                                                                        <a class="tn-date" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum"><i class="far fa-clock"></i>25-Mar-2025</a>
+                                            <a class="tn-title" href="Sudan's-army-recaptures-key-institutions-at-it-advances-in-central-Khartoum">Sudan's army recaptures key institutions at it advances in central Khartoum.</a>
                                         </div>
                                     </div>
                             <div class="col-md-6">
-                                <div class="cn-img">
+                                <div class="tn-img">
                                     <img src="img/kindiki.jpg" />
-                                    <a class="cn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>26-Feb-2025</a>
-                                            <a class="cn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
+                                    <a class="tn-date" href="kindiki-ploys-against-koome.html"><i class="far fa-clock"></i>26-Feb-2025</a>
+                                            <a class="tn-title" href="kindiki-ploys-against-koome.html">Deputy President Kithure Kindiki has spoken out on the alleged plan to remove Chief Justice Martha Koome from office</a>
                                     
                                     </div>
                                 </div>
